lang/tests/compile_fail/seeds_wrong_arity.stderr
error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> tests/compile_fail/seeds_wrong_arity.rs:19:25
   |
19 |     #[account(address = Vault::seeds())]
   |                         ^^^^^^^^^^^^-- argument #1 of type `&solana_address::Address` is missing
   |
note: associated function defined here
  --> tests/compile_fail/seeds_wrong_arity.rs:7:1
   |
 7 | #[account(discriminator = 1)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `account` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the argument
   |
19 |     #[account(address = Vault::seeds(/* &solana_address::Address */))]
   |                                      ++++++++++++++++++++++++++++++
